--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <script type="text/javascript" src="js/utils.js"></script>  
     <script type="text/javascript" src="js/shape.js"></script>  
     <script type="text/javascript" src="js/sprite.js"></script> 
+    <script type="text/javascript" src="js/cat.js"></script>
+    <script type="text/javascript" src="js/explosion.js"></script>
+    <script type="text/javascript" src="js/particle.js"></script>
     <script type="text/javascript" src="js/player.js"></script>   
     <script type="text/javascript" src="js/game.js"></script>  
     <script type="text/javascript" src="js/input.js"></script> 
