--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <script type="text/javascript" src="js/utils.js"></script>  
     <script type="text/javascript" src="js/shape.js"></script>  
     <script type="text/javascript" src="js/sprite.js"></script> 
-    <script type="text/javascript" src="js/cat.js"></script>
+    <script type="text/javascript" src="js/tank.js"></script>
+    <script type="text/javascript" src="js/cannonball.js"></script>
     <script type="text/javascript" src="js/explosion.js"></script>
     <script type="text/javascript" src="js/particle.js"></script>
     <script type="text/javascript" src="js/player.js"></script>   
